--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
                       <div class="text-center">
                         <a>
                           <h2 class="padding-bot10">GJZS-莫莫~</h2></a>
-			      <img src="/logo.png" alt="hero">
+			      <img src="https://gjzs.qqcn.site/logo.png" alt="hero">
+			      <header class="hero"> <h1 id="main-title">
+      搞机助手重制版
+    </h1> <p class="description">
+      搞机助手
+    </p> <p class="action"><a href="/download.html" class="nav-link action-button">
+  下载
+</a></p></header>
                       </div>
                     </header>
                     <article class="article" id="article">
