--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                       <div class="text-center">
                         <a>
                           <h2 class="padding-bot10">GJZS-莫莫~</h2></a>
-			      <img src="https://gjzs.qqcn.site/logo.png" alt="hero">
+			      <img width="560" height="560" src="https://gjzs.qqcn.site/logo.png" alt="hero">
 			      <header class="hero"> <h1 id="main-title">
       搞机助手重制版
     </h1> <p class="description">
