--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+  <script> onpageshow  =  
+    function() {    
+      var ss  =  new Array("https://gjzs.qqcn.site/logo.png");  
+      var num  =  parseInt(Math.random()  *  ss.length);
+      document.getElementById("videolink").src = ss[num];
+    }</script>
+  
   <head>
     <meta charset="utf-8">
-    <title>GJZS-莫莫</title>
+    <title>GJZS-莫莫~</title>
+    <link rel="stylesheet" href="https://gjzs.qqcn.site/assets/css/0.styles.ed19b1e7.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -13,6 +21,14 @@
   
   <body onload="if (screen.width > 720 && !/Android|webOS|iPhone|iPod|iPad|BlackBerry/i.test(navigator.userAgent)) { InitLive2D() }">
     <div class="header">
+      <header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/" class="home-link router-link-exact-active router-link-active" aria-current="page"><!----> <span class="site-name">搞机助手重制版</span></a> <div class="links" style="max-width: 1154px;"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value="" class="" placeholder=""> <!----></div> <nav class="nav-links can-hide"><div class="nav-item"><a href="/download.html" class="nav-link">
+  下载
+</a></div><div class="nav-item"><a href="/changelog_online.html" class="nav-link">
+  更新日志
+</a></div> <a href="https://github.com/momo54181/GJZS" target="_blank" rel="noopener noreferrer" class="repo-link">
+    GitHub
+    <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></nav></div></header>
+
       <main class="cd-main-content">
         <div class="container">
           <div class="wrapper-content article">
@@ -24,87 +40,27 @@
                       <div class="text-center">
                         <a>
                           <h2 class="padding-bot10">GJZS-莫莫~</h2></a>
-			      <img width="560" height="560" src="https://gjzs.qqcn.site/logo.png" alt="hero">
-			      <header class="hero"> <h1 id="main-title">
-      搞机助手重制版
-    </h1> <p class="description">
-      搞机助手
-    </p> <p class="action"><a href="/download.html" class="nav-link action-button">
-  下载
-</a></p></header>
                       </div>
                     </header>
                     <article class="article" id="article">
                       <p>
+                        <span style="font-size:30px;">搞机助手</p>
+                      <div style="position: relative; padding: 30% 45%;">
+                        <iframe style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;" src="" frameborder="no" scrolling="no" sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts" id="videolink"></iframe>
                       </div>
                       <h3>功能介绍</h3>
-                      <p>可直接通过替换单个文件来修复PanDownload。</p>
-                      <p>实现(加密)脚本下发</p>
-                      <p>与其他软件不同，采用重载PanDownload的方式来处理，以便以后更好接管相应功能</p>
-                      <h3>本版特点</h3>
-                      <p>1.允许最高使用1024线程下载</p>
-                      <p>2.允许最高32任务同时下载</p>
-                      <p>3.修复PanDownload全部功能，截至到发布日期，所有功能可用</p>
-                      <p>4.内置三大下载通道</p>
-                      <p>5.允许用户自定义PanDownload标题</p>
-                      <p>6.使用第三方提取码查询通道，自动填写提取码</p>
-                      <p>7.默认取消PanDownload的链接分享</p>
-                      <p>8.较好的容灾处理(眼神暗示)</p>
-                      <h3>使用方法</h3>
-                      <p>一、下载相应压缩包</p>二、确认杀软没有删除解压出来的内容</p>
-                      <p>三、双击运行PanDownload.exe即可，如果出什么错误，多开几次，试试管理员运行</p>
-                      <p>四、若出现解决不了的错误，可去Github详谈</p>
-                      <p>若着急使用，这里提供某位友人的下载器官网：
-                        <a href="https://kinhdown.kinh.cc/" target="_blank" textvalue="kinhdown.kinh.cc">kinhdown.kinh.cc</a></p>
-                      <p>GitHub地址：
-                        <a href="https://github.com/PanDownloadServer/Server/" target="_blank" textvalue="https://github.com/PanDownloadServer/Server/">https://github.com/PanDownloadServer/Server/</a></p>
+                      <p>重制版</p>
+                      <p>实现云端脚本下发</p>
+                      <h4>TIP</h4>
+                      <h5>欢迎进群交流</h5>
+                      <p>QQ一群1014636690</p></a></p>
                       <h3>下载地址</h3>
-					  <p>解压密码：123</p>
+					  <p>解压密码：momo</p>
                       <p>
                         <a href="https://cdn.jsdelivr.net/gh/PanDownloadServer/Server/PanDownloadLBW3.5.3M.zip" target="_blank" textvalue="https://cdn.jsdelivr.net/gh/PanDownloadServer/Server/PanDownloadLBW3.5.3M.zip">CDN地址1</a></p>
                       <p>
                         <a href="https://kurukurumi.tk/PanDownloadLBW3.5.3M.zip" target="_blank" textvalue="https://kurukurumi.tk/PanDownloadLBW3.5.3M.zip">CDN地址2</a></p>
                       <p>
-                        <a href="https://github.com/PanDownloadServer/Server/blob/master/PanDownloadLBW3.5.3M.zip" target="_blank" textvalue="https://github.com/PanDownloadServer/Server/blob/master/PanDownloadLBW3.5.3M.zip">原始地址</a></p>
-                      <p>
-                        <a href="https://cdn.jsdelivr.net/gh/PanDownloadServer/Server/node.dll" target="_blank" textvalue="https://cdn.jsdelivr.net/gh/PanDownloadServer/Server/node.dll">node.dll下载地址1</a></p>
-                      <p>
-                        <a href="https://github.com/PanDownloadServer/Server/blob/master/node.dll" target="_blank" textvalue="https://github.com/PanDownloadServer/Server/blob/master/node.dll">node.dll下载地址2</a></p>
-                      <h3>注意事项</h3>
-                      <p>webkit核心，node.dll使用PCS通道下载，或者去github下载也行</p>
-					  <p>程序若出现闪退，错误，请自行安装VC2017运行库</p>
-					  <p>推荐微软常用运行库合集，该程序可以一次性补足大部分运行库</p>
-                      <p>使用时将node.dll放到pandownload.exe同目录即可</p>
-                      <p>伞兵一号通道：被限速账号使用，会有加速效果</p>
-                      <p>伞兵二号通道：未被限速账号使用，不支持远程下载</p>
-                      <p>伞兵三号通道：未被限速账号使用，支持远程下载</p>
-                      <p>伞兵四号通道：被限速账号使用，可满速</p>
-					  <p>伞兵五号通道：没有可用账号时使用，云端解析</p>
-                      <p>分享下载，打包下载，webkit核心下载，切换到默认或者PCS通道后尝试</p>
-                      <h3>更新日志</h3>
-                      <p>3.5.2版本在2020年9月20日更新，作为正式版，欢迎反馈BUG</p>
-                      <p>3.5.2版本之后可能会不定时更新</p>
-                      <p>3.5.2版本修复伞兵五号[云解析]通道</p>
-                      <p>3.5.2版本修复bdstoken错误</p>
-					  <p>3.5.2版本各种BUG的修复</p>
-                      <h3>引用说明</h3>
-                      <p>以下为本软件使用的模块来源</p>
-                      <p>主要补丁工具：Baymax Patch Tools</p>
-                      <p>pd网页来源：
-                        <a href="https://github.com/Womsxd/pandownload.com_Pages_Backup" target="_blank" textvalue="https://github.com/Womsxd/pandownload.com_Pages_Backup">https://github.com/Womsxd/pandownload.com_Pages_Backup</a></p>
-                      <p>Aria2c补丁来源：
-                        <a href="https://www.bilibili.com/read/cv7397038" target="_blank" textvalue="https://www.bilibili.com/read/cv7397038">https://www.bilibili.com/read/cv7397038</a></p>
-                      <h3>感谢名单</h3>
-                      <p>Womsxd：感谢大佬的网页端~</p>
-                      <p>PDD：感谢大佬的神秘接口~</p>
-                      <p>猪猪侠：感谢大佬的修复方法~</p>
-                      <p>上学困难户：感谢大佬的Aria2c特征抹除</p>
-                      <p>*乐 天*：这位是催更出打包下载和分享下载的</p>
-                      <p>mobai li：这位是帮助开发了远程下载通道的 Ps：500mb/s真的恐怖</p>
-                      <p>边境 世界：这位是当初提供蓝奏云的上传的，现在因为隐私原因不再使用</p>
-                      <p>TkzcM：这位是最开始提供思路的</p>
-					  <p>kinhdown：感谢大佬的云解析</p>
-                      <p>完成于：2020年9月24日 5时20分</p>
                     </article>
                   </section>
                 </main>
@@ -113,8 +69,10 @@
           </div>
         </div>
       </main>
+      <div class="features"><div class="feature"><div class="footer">
+    Copyright © 2021 莫莫
     </div>
-    <button type="button" class="btn btn-info btn-sm canvas-close" style="position: fixed; right: 0px; bottom: 0px; z-index: 200;">不再显示canvas背景</button>
+    <button type="button" class="btn btn-info btn-sm canvas-close" style="position: fixed; right: 0px; bottom: 0px; z-index: 200;">莫莫</button>
     <script type="text/javascript" color="0,104,183" opacity="1" zindex="-1" count="100" src="https://cdn.jsdelivr.net/gh/PanDownloadServer/Server/Scripts/line.js"></script>
     <div class="layui-layer-move" style="cursor: move; display: none;"></div>
     <audio id="my_audio"></audio>
@@ -126,7 +84,6 @@
     <script type="text/javascript">if (screen.width > 720 && !/Android|webOS|iPhone|iPod|iPad|BlackBerry/i.test(navigator.userAgent)) {
         document.write('<script type="text/javascript" charset="utf-8" src="https://cdn.jsdelivr.net/gh/PanDownloadServer/Server/Scripts/live2d.min.js"><\/script>')
       }</script>
-</script>
   </body>
 
 </html>
