--- a/download.html
+++ b/download.html
@@ -37,10 +37,10 @@
                     </header>
                     <article class="article" id="article">
                       <p>
-                      <div style="position: relative; padding: 30% 45%;">
+                      <div style="position: relative; padding: 0% 45%;">
                       </div>
                       <h3>下载地址</h3>
-					  <p>解压密码：123</p>
+					  <p>解压密码：momo</p>
                       <p>
                         <a href="https://cdn.jsdelivr.net/gh/PanDownloadServer/Server/PanDownloadLBW3.5.3M.zip" target="_blank" textvalue="https://cdn.jsdelivr.net/gh/PanDownloadServer/Server/PanDownloadLBW3.5.3M.zip">CDN地址1</a></p>
                       <p>
