--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                       <h5>欢迎进群交流</h5>
                       <p>QQ一群1014636690</p></a></p>
                       <p>
+<h3>下载</h3>
+                      <p><a href="https://gjzs.moudio.top/download" target="_blank" rel="noopener noreferrer" class="repo-link">下载
+</p>
                     </article>
                   </section>
                 </main>
