--- a/download.html
+++ b/download.html
@@ -42,9 +42,7 @@
                       <h3>下载地址</h3>
 					  <p>解压密码：momo</p>
                       <p>
-                        <a href="https://cdn.jsdelivr.net/gh/PanDownloadServer/Server/PanDownloadLBW3.5.3M.zip" target="_blank" textvalue="https://cdn.jsdelivr.net/gh/PanDownloadServer/Server/PanDownloadLBW3.5.3M.zip">CDN地址1</a></p>
-                      <p>
-                        <a href="https://kurukurumi.tk/PanDownloadLBW3.5.3M.zip" target="_blank" textvalue="https://kurukurumi.tk/PanDownloadLBW3.5.3M.zip">CDN地址2</a></p>
+                        <a href="https://momo5418.lanzoui.com/b016ff0eh" target="_blank" textvalue="https://cdn.">CDN地址1</a></p>
                       <p>
                     </article>
                   </section>
