--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
       var num  =  parseInt(Math.random()  *  ss.length);
       document.getElementById("videolink").src = ss[num];
     }</script>
+  <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?3211c8bbbc0626d8e899e451b521c61d";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
   
   <head>
     <meta charset="utf-8">
     <title>GJZS-莫莫~</title>
-    <link rel="stylesheet" href="https://gjzs.qqcn.site/assets/css/0.styles.ed19b1e7.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -21,13 +30,13 @@
   
   <body onload="if (screen.width > 720 && !/Android|webOS|iPhone|iPod|iPad|BlackBerry/i.test(navigator.userAgent)) { InitLive2D() }">
     <div class="header">
-      <header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/" class="home-link router-link-exact-active router-link-active" aria-current="page"><!----> <span class="site-name">搞机助手重制版</span></a> <div class="links" style="max-width: 1154px;"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value="" class="" placeholder=""> <!----></div> <nav class="nav-links can-hide"><div class="nav-item"><a href="/download.html" class="nav-link">
+<a href="/download.html" class="nav-link">
   下载
 </a></div><div class="nav-item"><a href="/changelog_online.html" class="nav-link">
   更新日志
 </a></div> <a href="https://github.com/momo54181/GJZS" target="_blank" rel="noopener noreferrer" class="repo-link">
     GitHub
-    <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></nav></div></header>
+    
 
       <main class="cd-main-content">
         <div class="container">
@@ -48,16 +57,17 @@
                       <div style="position: relative; padding: 30% 45%;">
                         <iframe style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;" src="" frameborder="no" scrolling="no" sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts" id="videolink"></iframe>
                       </div>
+                      <h3>菜单</h3>
+                      <p>
+                        <a href="/download.html" target="_blank">下载</a></p>
+                        <p>
+                        <a href="/changelog_online.html" target="_blank">更新日志</a></p>
                       <h3>功能介绍</h3>
                       <p>重制版</p>
                       <p>实现云端脚本下发</p>
                       <h4>TIP</h4>
                       <h5>欢迎进群交流</h5>
                       <p>QQ一群1014636690</p></a></p>
-                      <p>
-<h3>下载</h3>
-                      <p><a href="https://gjzs.moudio.top/download" target="_blank" rel="noopener noreferrer" class="repo-link">下载
-</p>
                     </article>
                   </section>
                 </main>
