--- a/download.html
+++ b/download.html
@@ -2,25 +2,26 @@
 <html lang="zh-CN">
   <head>
     <meta charset="utf-8">
-    <title>GJZS-下载~</title>
-    <link rel="stylesheet" href="https://gjzs.qqcn.site/assets/css/0.styles.ed19b1e7.css">
+    <title>GJZS-更新日志~</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link href="https://cdn.jsdelivr.net/gh/PanDownloadServer/Server/bundles/main.vXZxP-zeFNcZJbnqU5xNE_-oaHZVKduO3-IPB-iECIpc.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/gh/PanDownloadServer/Server/Scripts/jquery_3.4.1.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/PanDownloadServer/Server/bundles/main.vraODx5hYf-DdzL9Ux5Z6Kmv9go-Dd1ofX_oEDjA4wRs.js"></script>
+    <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?3211c8bbbc0626d8e899e451b521c61d";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
   </head>
   
   <body onload="if (screen.width > 720 && !/Android|webOS|iPhone|iPod|iPad|BlackBerry/i.test(navigator.userAgent)) { InitLive2D() }">
-    <div class="header">
-      <header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/" class="home-link router-link-exact-active router-link-active" aria-current="page"><!----> <span class="site-name">搞机助手重制版</span></a> <div class="links" style="max-width: 1154px;"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value="" class="" placeholder=""> <!----></div> <nav class="nav-links can-hide"><div class="nav-item"><a href="/download.html" class="nav-link">
-  下载
-</a></div><div class="nav-item"><a href="/changelog_online.html" class="nav-link">
-  更新日志
-</a></div> <a href="https://github.com/momo54181/GJZS" target="_blank" rel="noopener noreferrer" class="repo-link">
-    GitHub
-    <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></nav></div></header>
 
       <main class="cd-main-content">
         <div class="container">
@@ -32,18 +33,22 @@
                     <header class="page-header">
                       <div class="text-center">
                         <a>
-                          <h2 class="padding-bot10">下载</h2></a>
+                          <h2 class="padding-bot10">更新日志</h2></a>
                       </div>
                     </header>
                     <article class="article" id="article">
                       <p>
                       <div style="position: relative; padding: 0% 45%;">
                       </div>
-                      <h3>下载地址</h3>
-					  <p>解压密码：momo</p>
+					  <p>捐赠支持我：https://www.moudio.top/%e6%8d%90%e5%8a%a9/<br>
+V1.0.0<br>
+非常臭不要脸的加入了捐赠功能<br>
+初步实现可用<br>
+使用Coding提供脚本下放服务<br>
+<p>免费提供，禁止倒卖<br>
+制作者：莫莫</p>
                       <p>
-                        <a href="https://momo5418.lanzoui.com/b016ff0eh" target="_blank" textvalue="https://cdn.">CDN地址1</a></p>
-                      <p>
+                        
                     </article>
                   </section>
                 </main>
