--- a/download.html
+++ b/download.html
@@ -2,7 +2,6 @@
 <html lang="zh-CN">
   <head>
     <meta charset="utf-8">
-    <title>GJZS-更新日志~</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -23,6 +22,7 @@ var _hmt = _hmt || [];
   
   <body onload="if (screen.width > 720 && !/Android|webOS|iPhone|iPod|iPad|BlackBerry/i.test(navigator.userAgent)) { InitLive2D() }">
 
+
       <main class="cd-main-content">
         <div class="container">
           <div class="wrapper-content article">
@@ -33,22 +33,21 @@ var _hmt = _hmt || [];
                     <header class="page-header">
                       <div class="text-center">
                         <a>
-                          <h2 class="padding-bot10">更新日志</h2></a>
+                          <h2 class="padding-bot10">下载</h2></a>
                       </div>
                     </header>
                     <article class="article" id="article">
                       <p>
+                        <span style="font-size:30px;">搞机助手</p>
                       <div style="position: relative; padding: 0% 45%;">
                       </div>
-					  <p>捐赠支持我：https://www.moudio.top/%e6%8d%90%e5%8a%a9/<br>
-V1.0.0<br>
-非常臭不要脸的加入了捐赠功能<br>
-初步实现可用<br>
-使用Coding提供脚本下放服务<br>
-<p>免费提供，禁止倒卖<br>
-制作者：莫莫</p>
-                      <p>
-                        
+                      <h3>下载地址</h3>
+					  <p>解压密码：momo</p>
+<p>
+<a href="https://momo5418.lanzoui.com/b016ff0eh" target="_blank" textvalue="https://cdn.">CDN地址1</a></p>
+<p>
+<a href="http://ct.moudio.top/d/24414542-43796744-4d18bb" target="_blank">搞机助手-online</a> （访问密码：3952）<br/>
+
                     </article>
                   </section>
                 </main>
